Revision history for PostgreSQL extension pair.

0.1.6
      - Made the tests collation-insensitive, so that failures won't occur for
        varying locales. Thanks to Daniele Varrazzo for the report.
      - Updated the `Makefile` to reflect the recommended patterns from
        pgsql-hackers. Thanks to Cédric Villemain for the details.
      - Fixed the Makefile to allow `PG_CONFIG=/path/to/pg_config` to actually
        work.

0.1.5 2011-11-11T17:55:06Z
      - Removed the `$MODULES` variable from the `Makefile` to fix an
        installation error. Thanks to Daniele Varrazzo for the report.

0.1.4 2011-11-11T06:52:04Z
      - Fixed the `Makefile` so that the documentation file should properly be
        found and installed by `PGXS`.

0.1.3 2011-05-12T18:53:39
      - Simplified the `CREATE EXTENSION` support in the `Makefile`.

0.1.2 2011-04-20T23:43:33
      - Properly updated version number in all relevant files.
      - Added abstract and doc file to the `provides` section of `META.json`.
      - Changed doc extension to `.md` so that it will be parsed as Markdown
        by PGXN.
      - Added PostgreSQL 9.1 `CREATE EXTENSION` support, including migration
        from an unpackaged install via `CREATE EXTENSION pair FROM
        unpackaged`.

0.1.1 2010-10-29T22:42:05
      - Fixed metadata file to list "pair" as the extension, not "pgtap".
      - Added Changes file.
      - Eliminated a line in the `Makefile` with "pgtap" in it. D'oh!
      - Added `COMMIT` to the end of `sql/pair.sql`. Might help with
        installation.
      - Using more `wildcard` more in the `Makefile` so that we don't have to
        maintain it manually when files are added or removed.

0.1.0 2010-10-18T20:59:54Z
      - Initial version.