@@ -1,2 +1,3 @@
 results/
 sql/pair--0*
+/pair-*
